--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "keygenqt/yii2-fancyBox3",
+	"name": "keygenqt/yii2-fancybox3",
 	"description": "Widget FancyBox3.",
 	"keywords": ["yii2", "extension", "widget", "jquery"],
 	"homepage": "https://github.com/keygenqt/yii2-fancyBox3",
