--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		}
 	],
 	"require": {
-		"bower-asset/fancybox": ">=3.0",
+		"bower-asset/fancybox": "~3.0",
 		"yiisoft/yii2": "*",
 		"php": ">=5.4.0"
 	},
